--- a/PI_ML/Frontend/src/app/componentes/barra/barra.component.html
+++ b/PI_ML/Frontend/src/app/componentes/barra/barra.component.html
@@ -2,7 +2,7 @@
   <!-- barra de progreso -->
   <div class="container-md mw-75 shadow-lg bg-body rounded" style="
   padding-left: 0px;
-  padding-right: 00px;
+  padding-right: 0px;
   ">
     <!-- div card header -->
     <div class="card-header">
@@ -19,7 +19,8 @@
     <!-- div card body -->
     <div class="card-body">
       <!-- div flex column -->
-      <div class="d-flex flex-column mb-3 justify-content-center">
+      <div class="d-flex flex-column mb-3 justify-content-center"
+      >
         <!-- div flex item 1 -->
         <div class="container-md w-75">
           <!-- div card subtitle d- flex -->
