--- a/PI_ML/Frontend/src/app/componentes/encabezado/encabezado.component.html
+++ b/PI_ML/Frontend/src/app/componentes/encabezado/encabezado.component.html
@@ -5,7 +5,7 @@
         <div class="container">
             <!-- Navbar brand -->
             <a class="me-2 navbar-logo" href="">
-                <img src="/src/assets/logo/Logo - Argentina Programa - black.png" height="75" alt="AP Logo"
+                <img src="/Frontend/src/assets/Logo - Argentina Programa - black.png" height="75" alt="AP Logo"
                     loading="lazy" style="margin-top: -1px;" />
             </a>
 
