--- a/PI_ML/Frontend/src/app/componentes/perfil/perfil.component.html
+++ b/PI_ML/Frontend/src/app/componentes/perfil/perfil.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <!-- img bg -->
       <a href="#" class="img-fluid" style="
-        background-image: url(/src/assets/marco-bianchetti-teclado-redimensionado.jpg);
+        background-image: url(/Frontend/src/assets/marco-bianchetti-teclado-redimensionado.jpg);
         height: 400px;
         width: 100%;
         background-repeat: no-repeat;
@@ -15,7 +15,7 @@
       <!-- img bg -->
       <!-- img profile -->
       <div class="d-flex">
-        <a><img src="../src/assets/imagen-profile.jpg" alt="" style="width: 180px; margin-top: -7rem; margin-left: 2rem"
+        <a><img src="/Frontend/src/assets/imagen-profile.jpg" alt="" style="width: 180px; margin-top: -7rem; margin-left: 2rem"
             class="me-auto shadow-lg mb-2 bg-body rounded-circle" />
           <h3 class="ms-4 text-center fw-bold">Luz mailen mamani</h3>
         </a>
