--- a/PI_ML/Frontend/src/app/componentes/barra/barra.component.html
+++ b/PI_ML/Frontend/src/app/componentes/barra/barra.component.html
@@ -1,93 +1,91 @@
- 
-  <!-- barra de progreso -->
-  <div class="container-md mw-75 shadow-lg bg-body rounded" style="
-  padding-left: 0px;
-  padding-right: 0px;
-  ">
-    <!-- div card header -->
-    <div class="card-header">
-      <!-- div card header flex -->
-      <div class="d-flex justify-content-between align-items-center">
-        <h5 class="card-title" style="margin-bottom: 0px;">Hard Skills & Soft Skills</h5>
-        <button type="button" class="btn btn-link btn-rounded">
-          <i class="bi bi-plus-circle"></i>
-        </button>
-      </div>
-      <!-- div card header flex -->
-    </div>
-    <!-- div card header -->
-    <!-- div card body -->
-    <div class="card-body">
-      <!-- div flex column -->
-      <div class="d-flex flex-column mb-3 justify-content-center"
-      >
-        <!-- div flex item 1 -->
-        <div class="container-md w-75">
-          <!-- div card subtitle d- flex -->
-          <div class="d-flex justify-content-between align-items-center">
-            <!-- elem I -->
-            <h6 class="card-title" style="margin-bottom: 0px;">
-              Resolución de problemas</h6>
-            <!-- elem I -->
-            <!-- elem II -->
-            <div>
-              <button type="button" class="btn btn-link btn-rounded">
-                <i class="bi bi-pencil-square"></i>
-              </button>
-              <button type="button" class="btn btn-link btn-rounded">
-                <i class="bi bi-trash"></i>
-              </button>
-            </div>
-            <!-- elem I -->
-          </div>
-          <!-- div card subtitle d- flex -->
-          <!-- progress bar -->
-          <div class="progress">
-            <!-- bar -->
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-              aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
-              style="width: 75%">
-            </div>
-            <!-- bar -->
-          </div>
-          <!-- progress bar -->
-        </div>
-        <!-- div flex item 1 -->
-        <!-- div flex item 2 -->
-        <div class="container-md w-75">
-          <!-- div card subtitle d- flex -->
-          <div class="d-flex justify-content-between align-items-center">
-            <!-- elem I -->
-            <h6 class="card-title" style="margin-bottom: 0px;">
-              Diseño de Sistemas</h6>
-            <!-- elem I -->
-            <!-- elem II -->
-            <div>
-              <button type="button" class="btn btn-link btn-rounded">
-                <i class="bi bi-pencil-square"></i>
-              </button>
-              <button type="button" class="btn btn-link btn-rounded">
-                <i class="bi bi-trash"></i>
-              </button>
-            </div>
-            <!-- elem I -->
-          </div>
-          <!-- div card subtitle d- flex -->
-          <!-- progress bar -->
-          <div class="progress">
-            <!-- bar -->
-            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
-              aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
-              style="width: 30%">
-            </div>
-            <!-- bar -->
-          </div>
-          <!-- progress bar -->
-        </div>
-        <!-- div flex item 2 -->
-      </div>
-      <!-- div flex column -->
-    </div>
-    <!-- div card body -->
-  </div>
-  <!-- barra de progreso -->
+ <!-- barra de progreso -->
+ <div class="container-md mw-75 shadow-lg bg-body rounded" style="
+ padding-left: 0px;
+ padding-right: 00px;
+ ">
+   <!-- div card header -->
+   <div class="card-header">
+     <!-- div card header flex -->
+     <div class="d-flex justify-content-between align-items-center">
+       <h5 class="card-title" style="margin-bottom: 0px;">Hard Skills & Soft Skills</h5>
+       <button type="button" class="btn btn-link btn-rounded">
+         <i class="bi bi-plus-circle"></i>
+       </button>
+     </div>
+     <!-- div card header flex -->
+   </div>
+   <!-- div card header -->
+   <!-- div card body -->
+   <div class="card-body">
+     <!-- div flex column -->
+     <div class="d-flex flex-column mb-3 justify-content-center">
+       <!-- div flex item 1 -->
+       <div class="container-md w-75">
+         <!-- div card subtitle d- flex -->
+         <div class="d-flex justify-content-between align-items-center">
+           <!-- elem I -->
+           <h6 class="card-title" style="margin-bottom: 0px;">
+             Resolución de problemas</h6>
+           <!-- elem I -->
+           <!-- elem II -->
+           <div>
+             <button type="button" class="btn btn-link btn-rounded">
+               <i class="bi bi-pencil-square"></i>
+             </button>
+             <button type="button" class="btn btn-link btn-rounded">
+               <i class="bi bi-trash"></i>
+             </button>
+           </div>
+           <!-- elem I -->
+         </div>
+         <!-- div card subtitle d- flex -->
+         <!-- progress bar -->
+         <div class="progress">
+           <!-- bar -->
+           <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+             aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+             style="width: 75%">
+           </div>
+           <!-- bar -->
+         </div>
+         <!-- progress bar -->
+       </div>
+       <!-- div flex item 1 -->
+       <!-- div flex item 2 -->
+       <div class="container-md w-75">
+         <!-- div card subtitle d- flex -->
+         <div class="d-flex justify-content-between align-items-center">
+           <!-- elem I -->
+           <h6 class="card-title" style="margin-bottom: 0px;">
+             Diseño de Sistemas</h6>
+           <!-- elem I -->
+           <!-- elem II -->
+           <div>
+             <button type="button" class="btn btn-link btn-rounded">
+               <i class="bi bi-pencil-square"></i>
+             </button>
+             <button type="button" class="btn btn-link btn-rounded">
+               <i class="bi bi-trash"></i>
+             </button>
+           </div>
+           <!-- elem I -->
+         </div>
+         <!-- div card subtitle d- flex -->
+         <!-- progress bar -->
+         <div class="progress">
+           <!-- bar -->
+           <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
+             aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+             style="width: 30%">
+           </div>
+           <!-- bar -->
+         </div>
+         <!-- progress bar -->
+       </div>
+       <!-- div flex item 2 -->
+     </div>
+     <!-- div flex column -->
+   </div>
+   <!-- div card body -->
+ </div>
+ <!-- barra de progreso -->
