--- a/PI_ML/Frontend/src/app/componentes/encabezado/encabezado.component.html
+++ b/PI_ML/Frontend/src/app/componentes/encabezado/encabezado.component.html
@@ -1,90 +1,89 @@
 <header>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <!-- Container wrapper -->
-        <div class="container">
-            <!-- Navbar brand -->
-            <a class="me-2 navbar-logo" href="">
-                <img src="/Frontend/src/assets/Logo - Argentina Programa - black.png" height="75" alt="AP Logo"
-                    loading="lazy" style="margin-top: -1px;" />
-            </a>
-
-            <!-- Toggle button -->
-            <button class="navbar-toggler btn-outline-primary" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarButtonsExample" aria-controls="navbarButtonsExample" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <i class="bi bi-justify"></i>
+      <!-- Container wrapper -->
+      <div class="container">
+        <!-- Navbar brand -->
+        <a class="me-2 navbar-logo" href="">
+          <img src="/../../assets/Logo - Argentina Programa - black.png" height="75" alt="AP Logo" loading="lazy"
+            style="margin-top: -1px;" />
+        </a>
+  
+        <!-- Toggle button -->
+        <button class="navbar-toggler btn-outline-primary" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarButtonsExample" aria-controls="navbarButtonsExample" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <i class="bi bi-justify"></i>
+        </button>
+  
+        <!-- Collapsible wrapper -->
+        <div class="collapse navbar-collapse" id="navbarButtonsExample">
+          <!-- Left links -->
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <strong>
+                  <h3 class="fw-bold">Luz Mailen</h3>
+                </strong>
+              </a>
+            </li>
+          </ul>
+          <!-- Left links -->
+  
+          <div class="d-flex align-items-center">
+            <a class="btn btn-dark px-3 me-2" href="" role="button"><i class="bi bi-git"></i></a>
+            <button type="button" class="btn btn-outline-primary px-3 me-2" data-bs-toggle="modal"
+              data-bs-target="#exampleModal">
+              Acceder
             </button>
-
-            <!-- Collapsible wrapper -->
-            <div class="collapse navbar-collapse" id="navbarButtonsExample">
-                <!-- Left links -->
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <strong>
-                                <h3 class="fw-bold">Luz Mailen</h3>
-                            </strong>
-                        </a>
-                    </li>
-                </ul>
-                <!-- Left links -->
-
-                <div class="d-flex align-items-center">
-                    <a class="btn btn-dark px-3 me-2" href="" role="button"><i class="bi bi-git"></i></a>
-                    <button type="button" class="btn btn-outline-primary px-3 me-2" data-bs-toggle="modal"
-                        data-bs-target="#exampleModal">
-                        Acceder
-                    </button>
-                </div>
-            </div>
-            <!-- Collapsible wrapper -->
+          </div>
         </div>
-        <!-- Container wrapper -->
+        <!-- Collapsible wrapper -->
+      </div>
+      <!-- Container wrapper -->
     </nav>
     <!-- Navbar -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <!-- modal header -->
-                <div class="modal-header bg-dark">
-                    <h5 class="modal-title text-light" id="exampleModalLabel">
-                        Inicia Sesión
-                    </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-                        <i class="bi bi-x-lg text-light"></i>
-                    </button>
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <!-- modal header -->
+          <div class="modal-header bg-dark">
+            <h5 class="modal-title text-light" id="exampleModalLabel">
+              Inicia Sesión
+            </h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+              <i class="bi bi-x-lg text-light"></i>
+            </button>
+          </div>
+          <!-- modal header -->
+          <!-- modal body -->
+          <div class="modal-body col-10 mx-auto">
+            <!-- login form -->
+            <form>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label fs-6 m-1">Correo electrónico</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label fs-6 m-1">Contraseña</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" />
+                <div id="emailHelp" class="form-text">
+                  We'll never share your password with anyone else.
                 </div>
-                <!-- modal header -->
-                <!-- modal body -->
-                <div class="modal-body col-10 mx-auto">
-                    <!-- login form -->
-                    <form>
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label fs-6 m-1">Correo electrónico</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp" />
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label fs-6 m-1">Contraseña</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" />
-                            <div id="emailHelp" class="form-text">
-                                We'll never share your password with anyone else.
-                            </div>
-                        </div>
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-                            <label class="form-check-label" for="exampleCheck1">Recordar nombre de usuario</label>
-                        </div>
-                        <div class="d-grid gap-2 col-6 mx-auto">
-                            <button type="submit" class="btn btn-primary">
-                                Submit
-                            </button>
-                        </div>
-                    </form>
-                    <!-- login form -->
-                </div>
-            </div>
+              </div>
+              <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+                <label class="form-check-label" for="exampleCheck1">Recordar nombre de usuario</label>
+              </div>
+              <div class="d-grid gap-2 col-6 mx-auto">
+                <button type="submit" class="btn btn-primary">
+                  Submit
+                </button>
+              </div>
+            </form>
+            <!-- login form -->
+          </div>
         </div>
+      </div>
     </div>
-</header>
+  </header>
