--- a/PI_ML/Frontend/src/app/app.component.html
+++ b/PI_ML/Frontend/src/app/app.component.html
@@ -1,8 +1,1 @@
-<app-encabezado></app-encabezado>
-<app-perfil></app-perfil>
-<app-botones></app-botones>
-<app-experiencia></app-experiencia>
-<app-educacion></app-educacion>
-<app-barra></app-barra>
-<app-proyectos></app-proyectos>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
