--- a/PI_ML/Frontend/src/app/componentes/educacion/educacion.component.html
+++ b/PI_ML/Frontend/src/app/componentes/educacion/educacion.component.html
@@ -1,96 +1,81 @@
-  <!-- educacion -->
-  <div class="container-md mw-75 shadow-lg bg-body rounded" style="
+<!-- experiencia -->
+<div class="container-md mw-75 shadow-lg bg-body rounded" style="
   padding-left: 0px;
   padding-right: 00px;
   ">
-    <!-- div card header -->
-    <div class="card-header">
-      <!-- div card header d-flex -->
-      <div class="d-flex justify-content-between align-items-center">
-        <h5 class="card-title" style="
-          margin-bottom: 0px;
-          ">
-          Educación</h5>
-        <button type="button" class="btn btn-link btn-rounded">
-          <i class="bi bi-plus-circle"></i>
+  <!-- div card header -->
+  <div class="card-header">
+    <!-- div card header d-flex -->
+    <div class="d-flex justify-content-between align-items-center">
+      <h5 class="card-title" style="
+      margin-bottom: 0px;
+      ">
+        Educación</h5>
+      <button type="button" class="btn btn-link btn-rounded" data-bs-toggle="modal" data-bs-target="#neweducModal" *ngIf="isLogged">
+        <i class="bi bi-plus-circle"></i>
+      </button>
+    </div>
+    <!-- div card header d-flex -->
+  </div>
+  <!-- div card header -->
+  <!-- div card body -->
+  <div class="card-body" *ngFor="let Educacion of educacion">
+    <!-- div subtitulo -->
+    <div class="d-flex justify-content-between align-items-center">
+      <!-- elem I -->
+      <h5 class="card-title">{{Educacion.nombreE}}</h5>
+      <!-- elem I -->
+      <!-- elem II -->
+      <div>
+        <button type="button" class="btn btn-link btn-rounded" [attr.data-bs-toggle]="'modal'" [attr.data-bs-target]="'#editModal'" [attr.data-bs-whatever]="Educacion.id" *ngIf="isLogged">
+          <i class="bi bi-pencil-square"></i>
+        </button>
+        <button type="button" class="btn btn-link btn-rounded" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal" *ngIf="isLogged">
+          <i class="bi bi-trash"></i>
         </button>
       </div>
-      <!-- div card header d-flex -->
+      <!-- elem II -->
     </div>
-    <!-- div card header -->
-    <!-- div card body 1 -->
-    <div class="card-body">
-      <!-- div subtitulo -->
-      <div class="d-flex justify-content-between align-items-center">
-        <!-- elem I -->
-        <h5 class="card-title">Elemento I</h5>
-        <!-- elem I -->
-        <!-- elem II -->
-        <div>
-          <button type="button" class="btn btn-link btn-rounded">
-            <i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#myModal"></i>
-          </button>
-          <div class="modal" id="myModal">
-            <div class="modal-dialog">
-              <div class="modal-content">
-  
-                <!-- Cabecera del modal -->
-                <div class="modal-header">
-                  <h4 class="modal-title">Editar información</h4>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-  
-                <!-- Cuerpo del modal -->
-                <div class="modal-body">
-                  <form>
-                    <div class="mb-3">
-                      <label for="titulo" class="form-label">Título:</label>
-                      <input type="text" class="form-control" id="titulo">
-                    </div>
-                    <div class="mb-3">
-                      <label for="imagen" class="form-label">Imagen:</label>
-                      <input type="file" class="form-control" id="imagen">
-                    </div>
-                    <div class="mb-3">
-                      <label for="descripcion" class="form-label">Descripción:</label>
-                      <textarea class="form-control" id="descripcion" rows="3"></textarea>
-                    </div>
-                  </form>
-                </div>
-  
-                <!-- Pie del modal -->
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                  <button type="button" class="btn btn-primary">Guardar cambios</button>
-                </div>
-  
-              </div>
-            </div>
+    <!-- div subtitulo -->
+    <!-- div body flex -->
+    <div class="d-flex align-items-center">
+      <!-- div body img -->
+      <div class="flex-shrink-0">
+        <img src="" alt="..." style="height: 120px; width: 100%;">
+      </div>
+      <!-- div body img -->
+      <!-- div body text -->
+      <div class="flex-grow-1 ms-3">
+        {{Educacion.descripcionE}}
+      </div>
+      <!-- div body text -->
+    </div>
+    <div class="modal fade" id="confirmDeleteModal" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="confirmDeleteModalLabel">Confirmar eliminación</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
-  
-          <button type="button" class="btn btn-link btn-rounded">
-            <i class="bi bi-trash"></i>
-          </button>
+          <div class="modal-body">
+            ¿Está seguro de que desea eliminar esta experiencia?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+            <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="delete(Educacion.id)">Eliminar</button>
+          </div>
         </div>
-        <!-- elem II -->
       </div>
-      <!-- div subtitulo -->
-      <!-- div body flex -->
-      <div class="d-flex align-items-center">
-        <!-- div body img -->
-        <div class="flex-shrink-0">
-          <img src="../img/logo/Logo - Argentina Programa - black.png" alt="..." style="height: 120px; width: 100%;">
-        </div>
-        <!-- div body img -->
-        <!-- div body text -->
-        <div class="flex-grow-1 ms-3">
-          This is some content from a media component. You can replace this with any content and adjust it as needed.
-        </div>
-        <!-- div body text -->
-      </div>
-      <!-- div body flex -->
     </div>
-    <!-- div card body 1 -->
+    <!-- div body flex -->
   </div>
-  <!-- educacion -->
+  <!-- div card body -->
+
+
   
+</div>
+<!-- experiencia -->
+
+
